# boulder

./: .cruft.json  .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  FMI_FMU_EXPORT.md  LICENSE  Makefile  PLUGIN_SYSTEM.md  README.md  SPECIFICATIONS.md  STONE_SPECIFICATIONS.md  app.py  cantera_converter.py  environment.yml  mypy.ini  pyproject.toml  run.py  setup.py  test_invalid_mechanism.yaml
.github/workflows/: ci.yml  on-push.yml  release.yml
assets/: draggable-modal.js  shift-cursor.js
blocscape/: __init__.py  app.py  cantera_converter.py  config.py  layout.py  styles.py  utils.py
blocscape/assets/: cytoscape-init.js  shift-cursor.js
blocscape/callbacks/: __init__.py  clientside_callbacks.py  config.py  config_callbacks.py  download.py  graph_callbacks.py  mfc.py  modal_callbacks.py  notification_callbacks.py  properties.py  properties_callbacks.py  reactor.py  simulation.py  simulation_callbacks.py
blocscape/data/: sample_config.json
boulder/: __init__.py  app.py  bindings.py  cantera_converter.py  cantera_docs.py  cli.py  config.py  ctutils.py  download_script_emitter.py  export.py  graphviz_utils.py  gui_actions.py  lagrangian.py  layout.py  live_simulation.py  network_plugin.py  output_pane_plugins.py  output_summary.py  payload_store.py  reactor_energy.py  reactor_sizing.py  result_cache.py  runner.py  runset.py  sankey.py  scenario_editor.py  schema_registry.py  scopes.py  signals.py  sim2stone.py  sim2stone_ast.py  sim2stone_cli.py  sim2stone_trace.py  simulation_result.py  simulation_worker.py  spatial_inference.py  stage_network.py  staged_network.py  staged_solver.py  stone2sim_cli.py  (+8 more)
boulder/api/: __init__.py  live_config.py  main.py  sse.py
boulder/assets/: console_forwarding.js  dark_mode.css  graph_resize.js
boulder/callbacks/: __init__.py  clientside_callbacks.py  config_callbacks.py  console_callbacks.py  graph_callbacks.py  modal_callbacks.py  notification_callbacks.py  (+5 more)
ci/: combined-environment-ci.yml  environment-ci.yml  environment-integration.yml
configs/: README.md  __init__.py  cstr_methane_air.yaml  default.yaml  grouped_nodes.yaml  mix_react_streams.yaml  sample_configs2.yaml  staged_psr_pfr.yaml  surf_pfr.yaml
docs/: Makefile  api.rst  cantera_upstream_examples.rst  conf.py  index.rst  installation.rst  stone.rst  usage.rst
examples/: GALLERY_HEADER.rst  README.md  README.rst  example_config.yaml  launch_from_cli.py  launch_from_python.py  mix1.py  mix1.yaml  mix1_final.py  mix_react_streams.yaml  mixed_reactor_stream_example.py  plot_mixed_reactor_stream_example.py  plot_staged_solve_from_yaml.py  plot_staged_solve_progressive_draw.py  plugin_example.py  sample_config.json  sample_config2.json  sample_configs2.yaml  staged_solve_from_yaml.py  staged_solve_progressive_draw.py
frontend/: SPECIFICATIONS.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
tests/: README.md  conftest.py  test_api.py  test_bindings_resolver.py  test_bindings_runtime.py  test_blocscape.py  test_cantera_script_emitter.py  test_cli_browser.py  test_cli_headless.py  test_cli_import.py  test_composite_yaml_roundtrip.py  test_config.py  test_config_output_block.py  test_config_validation.py  test_custom_stage_series.py  test_default_boulder_logging.py  test_doc_links.py  test_e2e.py  test_export.py  test_flow_conservation.py  test_graphviz_utils.py  test_gui_actions_api.py  test_live_config_adoption.py  test_network_plugin.py  test_node_plot_config.py  test_normalize_signals.py  test_output_summary.py  test_output_summary_integration.py  test_package_import.py  test_parse_composition.py  test_payload_store.py  test_per_stage_solver_sync.py  test_phase_b_transient.py  test_phase_c_continuation.py  test_plugin_example.py  test_ports_conflict.py  test_ports_expansion.py  test_pressure_controller_connection.py  test_pressure_defaults.py  test_psr_volume_sizing.py  (+43 more)
(+163 files in other folders)
